--- a/src/main/resources/static/views/admin.html
+++ b/src/main/resources/static/views/admin.html
@@ -14,22 +14,24 @@
 	href="https://fonts.googleapis.com/css?family=Manuale">
 <link rel="stylesheet" href="assets/css/create-survey.css">
 <link rel="stylesheet" href="assets/css/index.css">
+<link rel="stylesheet" href="assets/css/login.css">
 <link rel="stylesheet" href="assets/css/angular-growl.min.css">
+<link rel="stylesheet" href="assets/css/chosen.css">
+<link rel="stylesheet" href="assets/css/register.css">
 <style type="text/css">
-	.survey-setting {
-		position: relative;		
-	}
-	
-	.survey-setting .dropdown{
-		position: absolute;
-		top : 25px;
-		right : 15px;
-	}
-		
+.survey-setting {
+	position: relative;
+}
+
+.survey-setting .dropdown {
+	position: absolute;
+	top: 25px;
+	right: 15px;
+}
 </style>
 </head>
 
-<body ng-app="admin" ng-controller="adminCtr">
+<body ng-app="admin" ng-controller="commonCtr">
 	<div id="wrapper">
 		<div class="header">
 			<div class="container-fluid">
@@ -55,44 +57,58 @@
 						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-		<div id="content">
-			<div class="container-fluid">
-				<div growl></div>	
 				<div class="row">
-					<div class="col-md-3 survey-link" ng-repeat="survey in surveys">
-						<div class="col-md-12 survey-setting">
-							<img src="assets/img/survey.png">
-							<div class="dropdown pull-right">
-								<button style="border: none; background: none; outline: none;"
-									type="button" data-toggle="dropdown">
-									<i class="fa fa-ellipsis-v fa-1x"></i>
-								</button>
-								<div class="dropdown-menu">
-									<a href="/create_survey" class="dropdown-item">Tạo khảo sát</a>
-									<a href="/edit_survey?id={{survey.idsurvey}}" class="dropdown-item">Sửa Khảo sát</a>
-									<a class="dropdown-item" ng-click="deleteSurvey(survey.idsurvey)">Xóa khảo sát</a>
-								</div>
-							</div>
-						</div>
-						<p>
-							<i class="fa fa-pencil"></i>&nbsp;{{survey.name}}
-						</p>
-						<p>
-							<i class="fa fa-list-alt"></i>&nbsp;{{survey.category.name}}&nbsp;
-						</p>
+					<div class="container">
+						<nav class="navbar navbar-light navbar-expand-md">
+							<ul class="nav navbar-nav ml-auto">
+								<li class="nav-item"><a class="nav-link" href="/admin">Quản
+										lý</a></li>
+								<li class="nav-item"><a class="nav-link" href="#/login">Đăng
+										nhập</a></li>
+								<li class="nav-item"><a class="nav-link" href="#/register">Đăng
+										ký</a></li>																														
+								<li class="nav-item" ng-if="$root.username != ''">
+									<div class="dropdown show">
+										<a class="nav-link dropdown-toggle" href=""
+											role="button" id="dropdownMenuLink" data-toggle="dropdown"
+											aria-haspopup="true" aria-expanded="false"> {{$root.username}}
+										</a>
+
+										<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+											<a class="dropdown-item" href="" ng-click="logout()">Đăng xuất </a>
+										</div>
+									</div>									
+								</li>
+							</ul>
+						</nav>
 					</div>
 				</div>
 			</div>
 		</div>
+		<div id="content">
+			<div ng-view></div>
+		</div>
 	</div>
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+	<script src="assets/js/chosen.jquery.js"></script>
 	<script src="assets/js/angular.js" type="text/javascript"></script>
+	<script src="assets/js/angular-route.min.js" type="text/javascript"></script>
 	<script src="assets/js/angular-growl.min.js" type="text/javascript"></script>
-	<script src="assets/app/adminService.js" type="text/javascript"></script>
-	<script src="assets/app/adminCtr.js" type="text/javascript"></script>
+	<script src="assets/app/service/createSurveyService.js"
+		type="text/javascript"></script>
+	<script src="assets/app/controller/createSurveyCtr.js"
+		type="text/javascript"></script>
+	<script src="assets/app/service/adminService.js" type="text/javascript"></script>
+	<script src="assets/app/controller/adminCtr.js" type="text/javascript"></script>
+	<script src="assets/app/service/editService.js" type="text/javascript"></script>
+	<script src="assets/app/controller/editCtr.js" type="text/javascript"></script>
+	<script src="assets/app/service/loginService.js" type="text/javascript"></script>
+	<script src="assets/app/controller/loginCtr.js" type="text/javascript"></script>
+	<script src="assets/app/service/registerService.js" type="text/javascript"></script>
+	<script src="assets/app/controller/registerCtr.js" type="text/javascript"></script>
+	<script src="assets/app/service/answerSheetService.js" type="text/javascript"></script>
+	<script src="assets/app/controller/answerSheetCtr.js" type="text/javascript"></script>
 	<script src="assets/app/adminApp.js" type="text/javascript"></script>
 </body>
 
